Test para display de la página principal

--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -8,7 +8,7 @@
 .categories {
 	display: flex;
 	flex-wrap:wrap;
-	flex-direction:row;
+	flex-direction:column;
 	justify-content:flex-start;
 	align-items:stretch;
 	font-size: .9em;
