--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -6,12 +6,10 @@
 }
 
 .categories {
-	display: flex;
-	flex-wrap:wrap;
-	flex-direction:column;
-	justify-content:flex-start;
-	align-items:stretch;
-	font-size: .9em;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 1fr);
+    gap: 10px;
+    font-size: 0.9em;
 
 	h3 {
 		font-size: 2.75rem;
