--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -7,7 +7,7 @@
 
 .categories {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(0, 1fr));
+    grid-template-columns: repeat(auto-fill, 1fr);
     gap: 10px;
     font-size: 0.9em;
 
