--- a/_sass/tutorials.scss
+++ b/_sass/tutorials.scss
@@ -6,10 +6,12 @@
 }
 
 .categories {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, 1fr);
-    gap: 10px;
-    font-size: 0.9em;
+	display: flex;
+	flex-wrap:wrap;
+	flex-direction:row;
+	justify-content:flex-start;
+	align-items:stretch;
+	font-size: .9em;
 
 	h3 {
 		font-size: 2.75rem;
